--- a/第4章-动态规划算法.ipynb
+++ b/第4章-动态规划算法.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "executionInfo": {
      "elapsed": 2012,
@@ -77,65 +77,93 @@
    "outputs": [],
    "source": [
     "class PolicyIteration:\n",
-    "    \"\"\" 策略迭代算法 \"\"\"\n",
+    "    \"\"\" 策略迭代算法（Policy Iteration） \"\"\"\n",
+    "\n",
     "    def __init__(self, env, theta, gamma):\n",
     "        self.env = env\n",
-    "        self.v = [0] * self.env.ncol * self.env.nrow  # 初始化价值为0\n",
-    "        self.pi = [[0.25, 0.25, 0.25, 0.25]\n",
-    "                   for i in range(self.env.ncol * self.env.nrow)]  # 初始化为均匀随机策略\n",
-    "        self.theta = theta  # 策略评估收敛阈值\n",
-    "        self.gamma = gamma  # 折扣因子\n",
+    "        self.v = [0] * (self.env.ncol * self.env.nrow)  # 初始化 V(s)=0\n",
+    "        self.pi = [[0.25, 0.25, 0.25, 0.25]              # 初始化策略为均匀分布：π(a|s)=0.25\n",
+    "                   for _ in range(self.env.ncol * self.env.nrow)]\n",
+    "        self.theta = theta  # 价值函数收敛阈值 ε\n",
+    "        self.gamma = gamma  # 折扣因子 γ ∈ [0, 1]\n",
     "\n",
-    "    def policy_evaluation(self):  # 策略评估\n",
-    "        cnt = 1  # 计数器\n",
-    "        while 1:\n",
-    "            max_diff = 0\n",
-    "            new_v = [0] * self.env.ncol * self.env.nrow\n",
+    "    def policy_evaluation(self):  # 策略评估 (Policy Evaluation)\n",
+    "        cnt = 1  # 记录迭代轮数（仅用于打印日志）\n",
+    "        \n",
+    "        while True:\n",
+    "            max_diff = 0  # 当前轮中所有状态价值变动的最大值（用于判断是否收敛）\n",
+    "            \n",
+    "            # 初始化一个新一轮的状态价值函数 V_k+1(s)，初始为0（稍后会填入新计算的值）\n",
+    "            new_v = [0] * (self.env.ncol * self.env.nrow)\n",
+    "\n",
+    "            # 遍历所有状态 s ∈ 𝒮\n",
     "            for s in range(self.env.ncol * self.env.nrow):\n",
-    "                qsa_list = []  # 开始计算状态s下的所有Q(s,a)价值\n",
+    "                qsa_list = []  # 用于存储当前状态 s 下，所有动作的 π(a|s) * Q(s,a)\n",
+    "                \n",
+    "                # 遍历当前状态下的所有可能动作 a ∈ 𝒜（此处动作数为4）\n",
     "                for a in range(4):\n",
-    "                    qsa = 0\n",
-    "                    for res in self.env.P[s][a]:\n",
-    "                        p, next_state, r, done = res\n",
-    "                        qsa += p * (r + self.gamma * self.v[next_state] *\n",
-    "                                    (1 - done))\n",
-    "                        # 本章环境比较特殊,奖励和下一个状态有关,所以需要和状态转移概率相乘\n",
-    "                    qsa_list.append(self.pi[s][a] * qsa)\n",
-    "                new_v[s] = sum(qsa_list)  # 状态价值函数和动作价值函数之间的关系\n",
-    "                max_diff = max(max_diff, abs(new_v[s] - self.v[s]))\n",
-    "            self.v = new_v\n",
-    "            if max_diff < self.theta: break  # 满足收敛条件,退出评估迭代\n",
-    "            cnt += 1\n",
-    "        print(\"策略评估进行%d轮后完成\" % cnt)\n",
+    "                    qsa = 0  # Qπ(s,a) 累加器\n",
     "\n",
-    "    def policy_improvement(self):  # 策略提升\n",
+    "                    # 遍历所有 (p, s', r, done)：在状态 s 执行动作 a 后可能到达的后继状态 s'\n",
+    "                    for p, next_state, r, done in self.env.P[s][a]:\n",
+    "                        # p: 转移概率 P(s'|s,a)\n",
+    "                        # next_state: 下一状态 s'\n",
+    "                        # r: 即时奖励 r(s,a,s')\n",
+    "                        # done: 是否是终止状态\n",
+    "\n",
+    "                        # Qπ(s,a) += P(s'|s,a) * [r + γ * V_k(s')]\n",
+    "                        # 如果是终止状态(done=True)，则不考虑后续状态价值\n",
+    "                        qsa += p * (r + self.gamma * self.v[next_state] * (1 - done))\n",
+    "                    \n",
+    "                    # π(a|s) * Qπ(s,a)\n",
+    "                    qsa_list.append(self.pi[s][a] * qsa)\n",
+    "                \n",
+    "                # Vπ(s) = ∑_{a} π(a|s) * Qπ(s,a)，策略下的状态价值函数\n",
+    "                new_v[s] = sum(qsa_list)\n",
+    "\n",
+    "                # 记录新旧价值函数的最大差异，用于判断是否收敛\n",
+    "                max_diff = max(max_diff, abs(new_v[s] - self.v[s]))\n",
+    "\n",
+    "            # 更新当前的状态价值函数 V ← V_k+1\n",
+    "            self.v = new_v\n",
+    "\n",
+    "            # 若所有状态的更新值都小于阈值 θ，说明已收敛，退出循环\n",
+    "            if max_diff < self.theta:\n",
+    "                break\n",
+    "\n",
+    "            cnt += 1  # 否则继续迭代\n",
+    "\n",
+    "        print(\"策略评估进行 %d 轮后完成\" % cnt)\n",
+    "\n",
+    "\n",
+    "    def policy_improvement(self):  # 策略提升 (Policy Improvement)\n",
     "        for s in range(self.env.nrow * self.env.ncol):\n",
     "            qsa_list = []\n",
     "            for a in range(4):\n",
     "                qsa = 0\n",
-    "                for res in self.env.P[s][a]:\n",
-    "                    p, next_state, r, done = res\n",
-    "                    qsa += p * (r + self.gamma * self.v[next_state] *\n",
-    "                                (1 - done))\n",
+    "                for p, next_state, r, done in self.env.P[s][a]:\n",
+    "                    # Qπ(s, a) = ∑_{s'} P(s'|s,a) * [r(s,a) + γ V(s')]\n",
+    "                    qsa += p * (r + self.gamma * self.v[next_state] * (1 - done))\n",
     "                qsa_list.append(qsa)\n",
     "            maxq = max(qsa_list)\n",
-    "            cntq = qsa_list.count(maxq)  # 计算有几个动作得到了最大的Q值\n",
-    "            # 让这些动作均分概率\n",
+    "            cntq = qsa_list.count(maxq)\n",
+    "            # π'(a|s) = 1/cntq if Q(a)=maxQ else 0 （均分最优动作）\n",
     "            self.pi[s] = [1 / cntq if q == maxq else 0 for q in qsa_list]\n",
     "        print(\"策略提升完成\")\n",
     "        return self.pi\n",
     "\n",
-    "    def policy_iteration(self):  # 策略迭代\n",
-    "        while 1:\n",
-    "            self.policy_evaluation()\n",
-    "            old_pi = copy.deepcopy(self.pi)  # 将列表进行深拷贝,方便接下来进行比较\n",
-    "            new_pi = self.policy_improvement()\n",
-    "            if old_pi == new_pi: break"
+    "    def policy_iteration(self):  # 策略迭代主函数\n",
+    "        while True:\n",
+    "            self.policy_evaluation()  # 使用 π 评估 Vπ\n",
+    "            old_pi = copy.deepcopy(self.pi)\n",
+    "            new_pi = self.policy_improvement()  # 使用 Vπ 提升 π\n",
+    "            if old_pi == new_pi:  # 若策略不再变化 → π 已最优\n",
+    "                break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -158,15 +186,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "策略评估进行60轮后完成\n",
+      "策略评估进行 60 轮后完成\n",
       "策略提升完成\n",
-      "策略评估进行72轮后完成\n",
+      "策略评估进行 72 轮后完成\n",
       "策略提升完成\n",
-      "策略评估进行44轮后完成\n",
+      "策略评估进行 44 轮后完成\n",
       "策略提升完成\n",
-      "策略评估进行12轮后完成\n",
+      "策略评估进行 12 轮后完成\n",
       "策略提升完成\n",
-      "策略评估进行1轮后完成\n",
+      "策略评估进行 1 轮后完成\n",
       "策略提升完成\n",
       "状态价值：\n",
       "-7.712 -7.458 -7.176 -6.862 -6.513 -6.126 -5.695 -5.217 -4.686 -4.095 -3.439 -2.710 \n",
@@ -210,8 +238,8 @@
     "\n",
     "env = CliffWalkingEnv()\n",
     "action_meaning = ['^', 'v', '<', '>']\n",
-    "theta = 0.001\n",
-    "gamma = 0.9\n",
+    "theta = 0.001 # 值函数收敛的误差阈值\n",
+    "gamma = 0.9 # 折扣因子\n",
     "agent = PolicyIteration(env, theta, gamma)\n",
     "agent.policy_iteration()\n",
     "print_agent(agent, action_meaning, list(range(37, 47)), [47])\n",
@@ -240,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -326,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -346,26 +374,28 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[41mS\u001b[0mFFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFFG\n",
-      "冰洞的索引: {11, 12, 5, 7}\n",
-      "目标的索引: {15}\n",
-      "[(0.3333333333333333, 10, 0.0, False), (0.3333333333333333, 13, 0.0, False), (0.3333333333333333, 14, 0.0, False)]\n",
-      "[(0.3333333333333333, 13, 0.0, False), (0.3333333333333333, 14, 0.0, False), (0.3333333333333333, 15, 1.0, True)]\n",
-      "[(0.3333333333333333, 14, 0.0, False), (0.3333333333333333, 15, 1.0, True), (0.3333333333333333, 10, 0.0, False)]\n",
-      "[(0.3333333333333333, 15, 1.0, True), (0.3333333333333333, 10, 0.0, False), (0.3333333333333333, 13, 0.0, False)]\n"
+     "ename": "DependencyNotInstalled",
+     "evalue": "pygame is not installed, run `pip install gym[toy_text]`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.11.6/lib/python3.11/site-packages/gym/envs/toy_text/frozen_lake.py:289\u001b[39m, in \u001b[36mFrozenLakeEnv._render_gui\u001b[39m\u001b[34m(self, mode)\u001b[39m\n\u001b[32m    288\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m289\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpygame\u001b[39;00m\n\u001b[32m    290\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pygame'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mDependencyNotInstalled\u001b[39m                    Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m env = gym.make(\u001b[33m\"\u001b[39m\u001b[33mFrozenLake-v1\u001b[39m\u001b[33m\"\u001b[39m)  \u001b[38;5;66;03m# 创建环境\u001b[39;00m\n\u001b[32m      3\u001b[39m env = env.unwrapped  \u001b[38;5;66;03m# 解封装才能访问状态转移矩阵P\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43menv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 环境渲染,通常是弹窗显示或打印出可视化的环境\u001b[39;00m\n\u001b[32m      6\u001b[39m holes = \u001b[38;5;28mset\u001b[39m()\n\u001b[32m      7\u001b[39m ends = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.11.6/lib/python3.11/site-packages/gym/core.py:58\u001b[39m, in \u001b[36m_deprecate_mode.<locals>.render\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.spec \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mrender_mode\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.spec.kwargs.keys():  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[32m     49\u001b[39m     deprecation(\n\u001b[32m     50\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mYou are calling render method, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     51\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mbut you didn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt specified the argument render_mode at environment initialization. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     55\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mSee here for more information: https://www.gymlibrary.ml/content/api/\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     56\u001b[39m     )\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mrender_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.11.6/lib/python3.11/site-packages/gym/envs/toy_text/frozen_lake.py:278\u001b[39m, in \u001b[36mFrozenLakeEnv.render\u001b[39m\u001b[34m(self, mode)\u001b[39m\n\u001b[32m    276\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.renderer.get_renders()\n\u001b[32m    277\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m278\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_render\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.11.6/lib/python3.11/site-packages/gym/envs/toy_text/frozen_lake.py:285\u001b[39m, in \u001b[36mFrozenLakeEnv._render\u001b[39m\u001b[34m(self, mode)\u001b[39m\n\u001b[32m    283\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._render_text()\n\u001b[32m    284\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;129;01min\u001b[39;00m {\u001b[33m\"\u001b[39m\u001b[33mhuman\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mrgb_array\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33msingle_rgb_array\u001b[39m\u001b[33m\"\u001b[39m}:\n\u001b[32m--> \u001b[39m\u001b[32m285\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_render_gui\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.11.6/lib/python3.11/site-packages/gym/envs/toy_text/frozen_lake.py:291\u001b[39m, in \u001b[36mFrozenLakeEnv._render_gui\u001b[39m\u001b[34m(self, mode)\u001b[39m\n\u001b[32m    289\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpygame\u001b[39;00m\n\u001b[32m    290\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m291\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m DependencyNotInstalled(\n\u001b[32m    292\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mpygame is not installed, run `pip install gym[toy_text]`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    293\u001b[39m     )\n\u001b[32m    295\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.window_surface \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    296\u001b[39m     pygame.init()\n",
+      "\u001b[31mDependencyNotInstalled\u001b[39m: pygame is not installed, run `pip install gym[toy_text]`"
      ]
     }
    ],
    "source": [
     "import gym\n",
-    "env = gym.make(\"FrozenLake-v0\")  # 创建环境\n",
+    "env = gym.make(\"FrozenLake-v1\")  # 创建环境\n",
     "env = env.unwrapped  # 解封装才能访问状态转移矩阵P\n",
     "env.render()  # 环境渲染,通常是弹窗显示或打印出可视化的环境\n",
     "\n",
@@ -403,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -470,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -537,7 +567,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.11.6",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
